Latest episodes are showing in Home Layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="anime_image">Anime image</string>
+    <string name="anime_cover_shimmer">Anime cover shimmer</string>
+    <string name="category">Categoria</string>
 </resources>
