Data source system created and implemented in latest episodes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="anime_image">Anime image</string>
     <string name="anime_cover_shimmer">Anime cover shimmer</string>
     <string name="category">Categoria</string>
+    <string name="latest_episodes">Últimos episodios</string>
 </resources>
