--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="anime_cover_shimmer">Anime cover shimmer</string>
     <string name="category">Categoria</string>
     <string name="latest_episodes">Últimos episodios</string>
+    <string name="play">Reproducir</string>
+    <string name="download">Descargar</string>
+    <string name="icon_of_the_menu_item">Icon of the menu item</string>
+    <string name="anime_details">Detalles del anime</string>
+    <string name="mark_as_seen">Marcar como visto</string>
 </resources>
