progress in anime details dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,5 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="anime_banner">Anime banner</string>
+    <string name="watch_now">VER AHORA</string>
 </resources>
